# my-website

./: 404.html  README.md  index.html  mkdocs.yml  my-website.code-workspace  pyproject.toml  search.html  sitemap.xml
contact/: index.html
docs/: contact.md  index.md  personal projects.md  professional experiences.md  projects.md  skillset.md  summary.md
personal projects/: index.html
professional experiences/: index.html
projects/: index.html
search/: search_index.json
skillset/: index.html
summary/: index.html
tests/: test_my_website.py
