[tool.poetry]
name = "my-website"
version = "0.1.0"
description = ""
authors = ["sriram161 <k.sriramsagar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
mkdocs-material = "^5.3.2"
pymdown-extensions = "^7.1"
fontawesome-markdown = "^0.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
